--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+html{
+  height:100%;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,6 +9,10 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  min-height: 100%;
+  display: flex;
+  flex-direction: column;
+ 
 }
 
 code {
@@ -51,4 +59,9 @@ code {
   color: #EE6352;
   padding: 10px 15px;
 }
+
+/* .footer{
+  position: sticky;
+  top: 100%;
+} */
 
