--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,7 @@ html{
 
 body {
   margin: 0;
+  padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -15,6 +16,20 @@ body {
  
 }
 
+#wrapper {
+  min-height: 100%;
+  position: relative;
+}
+
+.header {
+  background: #ff0;
+  padding: 10px;
+}
+
+.body {
+  padding: 10px;
+  padding-bottom: 60px; 
+}
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
@@ -61,7 +76,9 @@ code {
 }
 
 footer {
-  position: relative;
+  position: absolute;
   bottom: 0;
   width: 100%;
+  height: 60px; 
+  background: #6cf
  }
