--- a/src/App.css
+++ b/src/App.css
@@ -47,17 +47,11 @@
   color: #17252a;
   background-color: #def2f1;
   border-bottom: none;
-  margin-bottom: 0;
-  margin-top:0;
-}
-.footer{
-  position: relative;
-  left: 0;
-  bottom:0;
-  right:0;
+  /* margin-bottom: 0;
+  margin-top:0; */
 }
 
-.cont{
-  padding-bottom: 60px;
+.container{
+  padding-bottom: 400px;
 }
 
