--- a/src/index.css
+++ b/src/index.css
@@ -2,9 +2,12 @@ html{
   height:100%;
 }
 
+
+
 body {
   margin: 0;
   padding: 0;
+  /* padding-bottom: 60px; */
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -13,6 +16,7 @@ body {
   min-height: 100%;
   display: flex;
   flex-direction: column;
+  /* position: relative; */
  
 }
 
@@ -21,15 +25,7 @@ body {
   position: relative;
 }
 
-.header {
-  background: #ff0;
-  padding: 10px;
-}
 
-.body {
-  padding: 10px;
-  padding-bottom: 60px; 
-}
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
@@ -64,21 +60,11 @@ code {
   margin: 0px;
 }
 
-.success-msg {
-  color: #57A773;
-  padding: 10px 15px;
-}
-
-
-.err-msg {
-  color: #EE6352;
-  padding: 10px 15px;
-}
 
 footer {
-  position: absolute;
+  position: relative;
   bottom: 0;
   width: 100%;
   height: 60px; 
-  background: #6cf
+  margin-top: auto;
  }
