working on styling

--- a/src/App.css
+++ b/src/App.css
@@ -47,11 +47,11 @@
   color: #17252a;
   background-color: #def2f1;
   border-bottom: none;
-  /* margin-bottom: 0;
-  margin-top:0; */
+  margin-bottom: 0;
+  margin-top:0;
 }
 
-.container{
+/* .container{
   padding-bottom: 400px;
-}
+} */
 
