--- a/src/App.css
+++ b/src/App.css
@@ -39,16 +39,34 @@
 }
 
 .bear {
-  color: #def2f1;
-  background: #3aafa9;
+  color: #d3e3fc;
+  background: #222629;
+  min-height: 20vh;
 }
 
-.dog {
-  color: #17252a;
-  background-color: #def2f1;
+.dogHead {
+  color: #222629;
+  background-color: #86c232;
   border-bottom: none;
   margin-bottom: 0;
   margin-top:0;
+}
+
+.dogTail {
+  color: #222629;
+  background-color: #86c232;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between
+}
+
+.fish{
+  color: #17252a;
+  background-color: #86c232;
+  display:block;
+  height: 50px;
+  width: 80px;
+  border-radius: 12px;
 }
 
 /* .container{
