--- a/src/index.css
+++ b/src/index.css
@@ -14,8 +14,8 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   min-height: 100%;
-  display: flex;
-  flex-direction: column;
+  /* display: flex; */
+  /* flex-direction: column; */
   /* position: relative; */
  
 }
@@ -61,10 +61,10 @@ code {
 }
 
 
-footer {
+/* footer {
   position: relative;
   bottom: 0;
   width: 100%;
   height: 60px; 
   margin-top: auto;
- }
+ } */
