--- a/src/App.css
+++ b/src/App.css
@@ -42,6 +42,7 @@
   color: #d3e3fc;
   background: #222629;
   min-height: 20vh;
+  font-family: 'Open Sans', 'sans-serif';
 }
 
 .dogHead {
@@ -50,6 +51,7 @@
   border-bottom: none;
   margin-bottom: 0;
   margin-top:0;
+  font-family: 'Open Sans', 'sans-serif'
 }
 
 .dogTail {
@@ -69,6 +71,3 @@
   border-radius: 12px;
 }
 
-/* .container{
-  padding-bottom: 400px;
-} */
