--- a/src/App.css
+++ b/src/App.css
@@ -47,20 +47,14 @@
 
 .dogHead {
   color: #222629;
-  background-color: #86c232;
+  background: linear-gradient(180deg, #86c232 0%,#61892f 100% );
   border-bottom: none;
   margin-bottom: 0;
   margin-top:0;
   font-family: 'Open Sans', 'sans-serif'
 }
 
-.dogTail {
-  color: #222629;
-  background-color: #86c232;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between
-}
+
 
 .fish{
   color: #17252a;
@@ -69,5 +63,50 @@
   height: 50px;
   width: 80px;
   border-radius: 12px;
+}
+
+.spacer{
+  height: 10px;
+  width: 80px;
+}
+
+.yeeter{
+  max-width: 100%;
+}
+
+.links{
+  width: 40px;
+  height: 40px;
+}
+
+.yeet{
+  float: right;
+}
+
+.footer {
+  background: linear-gradient(180deg, #61892f 0%,#86c232 100% );
+  height: 60px;
+  
+  /* margin: 10px 0 0; */
+
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-size: 1.2rem;
+}
+
+.footer-logo-container {
+  margin-left: 20px;
+}
+
+.footer-logo {
+  font-size: 25px;
+  color: #222629;
+  text-decoration: none;
+}
+
+.copywrite-containter {
+  margin-right: 20px;
+  color: #222629;
 }
 
