--- a/src/index.css
+++ b/src/index.css
@@ -40,7 +40,8 @@ code {
   border-radius: 10px;
   width: 480px;
   height: 272px;
-  box-shadow: 0px 0px 3px 1px #ccc
+  box-shadow: 0px 0px 3px 1px #ccc;
+
 
 }
 
